# privnet

./: CLIENT_AUTH.md  Cargo.toml  Dockerfile  README.md
certs/: ca.crt  ca.key  ca.srl  client_0.crt  client_0.csr  client_0.key  localhost.bundle.crt  localhost.crt  localhost.csr  localhost.key  localhost.pubkey
src/: client.rs  cmd.rs  main.rs  message.rs  server.rs  tls_utils.rs  utils.rs
