[package]
name = "privnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
# TODO remove unwanted features in tokio
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
serde_json = "1.0.113"
futures = { version = "0.3.30" }
# TODO check if serde is really required
dashmap = { version = "5.5.3", features = ["serde"] }
log = "0.4.20"
env_logger = "0.11.2"
chrono = "0.4.34"
