[package]
name = "privnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
# TODO remove unwanted features in tokio
tokio = { version = "1.36.0", features = ["rt", "net", "io-util", "rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
futures = { version = "0.3.30" }
log = "0.4.20"
env_logger = "0.11.2"
rustls = {version="0.22.2", features = ["logging","tls12", "ring", "log", "aws_lc_rs"]}
tokio-rustls = {version = "0.25.0", features = ["logging","tls12", "ring"]}
rustls-pemfile = "2.1.0"
